# bazel-go

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  main.go
.github/workflows/: bazel-go-comp.yaml
a/: BUILD.bazel  a.go  a_test.go
b/: BUILD.bazel  b.go  b_test.go
b/c/: BUILD.bazel  c.go  c_test.go
