load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

# The `disable_global` directive stops proto file (re)generation inside of bazel builds and uses the already generated .pb.go files.
# See https://github.com/bazel-contrib/rules_go/blob/master/proto/core.rst#id7 for more details.
# gazelle:proto disable_global
gazelle(name = "gazelle")

go_library(
    name = "bazel-go_lib",
    srcs = ["main.go"],
    importpath = "bazel-go",
    visibility = ["//visibility:private"],
    deps = [
        "//a",
        "//b",
    ],
)

go_binary(
    name = "bazel-go",
    embed = [":bazel-go_lib"],
    visibility = ["//visibility:public"],
)
