# https://registry.bazel.build/modules/rules_go
bazel_dep(name = "rules_go", version = "0.57.0", repo_name = "rules_go")

# https://github.com/bazel-contrib/rules_go/blob/v0.57.0/go/private/extensions.bzl
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.3")

# https://registry.bazel.build/modules/gazelle
bazel_dep(name = "gazelle", version = "0.45.0")

# https://github.com/bazel-contrib/bazel-gazelle/blob/master/extensions.md#go_deps
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.gazelle_default_attributes(
    directives = [
        "gazelle:proto disable",  # Disable proto file generation for external dependencies
    ],
)
use_repo(
    go_deps,
    "com_github_smartcontractkit_chainlink_common",
)
