load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "a",
    srcs = ["a.go"],
    importpath = "bazel-go/a",
    visibility = ["//visibility:public"],
    deps = ["@com_github_smartcontractkit_chainlink_common//pkg/types/chains/evm"],
)

go_test(
    name = "a_test",
    srcs = ["a_test.go"],
    embed = [":a"],
)
